--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "tapable": "^2.2.1",
     "terser": "^5.37.0",
     "terser-webpack-plugin": "^5.3.11",
+    "uglify-js": "^3.19.3",
     "undici-types": "^6.20.0",
     "update-browserslist-db": "^1.1.2",
     "uri-js": "^4.4.1",
