title alignment component

--- a/TB/package.json
+++ b/TB/package.json
@@ -6,7 +6,8 @@
     "scripts": {
       "start": "webpack serve --mode development",
       "build": "webpack --mode production --watch",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "dev": "webpack --mode production --watch"
     },
     "keywords": [
       "typescript",
