--- a/TB/package.json
+++ b/TB/package.json
@@ -7,7 +7,7 @@
       "start": "webpack serve --mode development",
       "build": "webpack --mode production --watch",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "webpack --mode production --watch"
+      "dev": "webpack --mode development --watch"
     },
     "keywords": [
       "typescript",
