--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "axios": "^1.8.3",
-        "localizationjs": "^2.0.20"
+        "localizationjs": "^2.0.20",
+        "quill": "^2.0.3"
     }
 }
