--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@types/lodash": "^4.17.16",
         "axios": "^1.8.3",
+        "html2canvas": "^1.4.1",
         "i18n-js": "^4.5.1",
         "localizationjs": "^2.0.20",
         "lodash": "^4.17.21",
