--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -29,6 +29,7 @@
         "@types/lodash": "^4.17.16",
         "axios": "^1.8.3",
         "d3": "^7.9.0",
+        "date-fns": "^4.1.0",
         "html2canvas": "^1.4.1",
         "i18n-js": "^4.5.1",
         "localizationjs": "^2.0.20",
