--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "sourceMap": true,
     "lib": ["dom", "es2015", "es2016", "es2017"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/window.d.ts"]
 }
